--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 杰 杰
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: 杰 杰
+language: zh-CN
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://ycj007.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
