--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "@vuepress/theme-default": "^2.0.0-rc.84",
     "sass-embedded": "^1.85.1",
     "vuepress": "^2.0.0-rc.20"
+  },"overrides": {
+    "esbuild": "0.25.3"
   }
 }
