--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # VuePress 默认临时文件目录
-.vuepress/.temp
+docs/.vuepress/.temp
 # VuePress 默认缓存目录
 .vuepress/.cache
 # VuePress 默认构建生成的静态文件目录
@@ -8,3 +8,9 @@
 node_modules/
 dist/
 npm-debug.log
+.cache/ 
+.temp/
+docs/.vuepress/.cache/
+docs/.vuepress/dist/
+package-lock.json
+yarn.lock
