--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "@vuepress/theme-default": "^2.0.0-rc.7",
   "sass-embedded": "^1.85.1",
   "vuepress": "^2.0.0-rc.8"                 
-} 
+} ,
+"optionalDependencies": {
+  "@rollup/rollup-linux-x64-gnu": "*"
+}
+
 }
