--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.7",
     "@vuepress/cli": "^2.0.0-rc.7",
+    "@vuepress/plugin-catalog": "^2.0.0-rc.7",
+    "@vuepress/plugin-comment": "^2.0.0-rc.83",
+    "@vuepress/plugin-markdown-tab": "^2.0.0-rc.7",
+    "@vuepress/plugin-search": "^2.0.0-rc.7",
+    "@vuepress/plugin-watermark": "^2.0.0-rc.7",
     "@vuepress/theme-default": "^2.0.0-rc.7",
     "sass-embedded": "^1.85.1",
     "vuepress": "^2.0.0-rc.8"
